# cross-market-arbritrage-platform

./: LICENSE  README.md
backend/: CMakeLists.txt  arbitrage-platform
backend/include/: arbitrage_engine.h  market_data_client.h  types.h  websocket_server.h
backend/src/: main.cpp
backend/src/arbitrage/: arbitrage_engine.cpp
backend/src/market_data/: polymarket_client.cpp
backend/src/server/: websocket_server.cpp
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  modal.css  page.tsx
frontend/components/: ComingSoonView.tsx  ConnectionStatus.tsx  MarketDataView.tsx  MarketDetailModal.tsx  OpportunitiesList.tsx  OpportunitiesView.tsx  PortfolioView.tsx  SpiderHeader.tsx  SpiderSidebar.tsx  TradeModal.tsx
